--- a/index.html
+++ b/index.html
@@ -108,6 +108,15 @@
                     </div>
 
                     <div class="form-group">
+                        <label class="form-label required">Gender</label>
+                        <select class="form-input" id="testatorGender" required>
+                            <option value="">Select...</option>
+                            <option value="male">Male</option>
+                            <option value="female">Female</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group">
                         <label class="form-label required">Date of Birth</label>
                         <input type="date" class="form-input" id="dateOfBirth" required>
                     </div>
